--- a/src/app/authorized/change-password/change-password.component.html
+++ b/src/app/authorized/change-password/change-password.component.html
@@ -2,7 +2,7 @@
 <div class="flex items-center justify-center h-screen">
   <div class="mt-10 sm:mt-0">
 
-    <h2 class="text-2xl text-center leading-7  text-gray-900 sm:text-3xl sm:truncate">Change Password</h2>
+    <h2 i18n class="text-2xl text-center leading-7  text-gray-900 sm:text-3xl sm:truncate">Change Password</h2>
 
     <form [formGroup]="changePasswordForm">
       <div class="px-4 py-5 bg-white sm:p-6">
@@ -12,15 +12,15 @@
             <input type="text" id="oldPassword" name="oldPassword" formControlName="oldPassword"
                    class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-black bg-transparent rounded-lg border-1 border-gray-800 appearance-none text-black border-gray-900 focus:border-emerald-500 focus:outline-none focus:ring-0 focus:border-emerald-600 peer"
                    placeholder=" "/>
-            <label for="oldPassword"
+            <label i18n for="oldPassword"
                    class="absolute text-sm text-gray-500 text-gray-400 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white px-2 peer-focus:px-2 peer-focus:text-emerald-600 peer-focus:text-emerald-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 left-1">Old password</label>
             <div *ngIf="(oldPassword.invalid && oldPassword.touched) || oldPassword.dirty">
-              <small *ngIf="oldPassword.errors?.['required']" class="bg-white text-red-700" role="alert">Password is empty, but
+              <small i18n *ngIf="oldPassword.errors?.['required']" class="bg-white text-red-700" role="alert">Password is empty, but
                 is required</small>
-              <small *ngIf="oldPassword.errors?.['minlength']" class="bg-white text-red-700" role="alert">Please provide a valid
+              <small i18n *ngIf="oldPassword.errors?.['minlength']" class="bg-white text-red-700" role="alert">Please provide a valid
                 password with at least 8 characters</small>
             </div>
-            <small *ngIf="showError" class="bg-white text-red-700" role="alert">Old Password is incorrect, please try again</small>
+            <small i18n *ngIf="showError" class="bg-white text-red-700" role="alert">Old Password is incorrect, please try again</small>
 
           </div>
 
@@ -29,12 +29,12 @@
             <input type="text" id="newPassword" name="newPassword" formControlName="newPassword"
                    class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-black bg-transparent rounded-lg border-1 border-gray-300 appearance-none text-black border-gray-600 focus:border-emerald-500 focus:outline-none focus:ring-0 focus:border-emerald-600 peer"
                    placeholder=" "/>
-            <label for="newPassword"
+            <label i18n for="newPassword"
                    class="absolute text-sm text-gray-500 text-gray-400 duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-[0] bg-white px-2 peer-focus:px-2 peer-focus:text-emerald-600 peer-focus:text-emerald-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 left-1">New password</label>
             <div *ngIf="(newPassword.invalid && newPassword.touched) || newPassword.dirty">
-              <small *ngIf="newPassword.errors?.['required']" class="bg-white text-red-700" role="alert">Password is empty, but
+              <small i18n *ngIf="newPassword.errors?.['required']" class="bg-white text-red-700" role="alert">Password is empty, but
                 is required</small>
-              <small *ngIf="newPassword.errors?.['minlength']" class="bg-white text-red-700" role="alert">Please provide a valid
+              <small i18n *ngIf="newPassword.errors?.['minlength']" class="bg-white text-red-700" role="alert">Please provide a valid
                 password with at least 8 characters</small>
             </div>
           </div>
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="px-4 py-3 sm:px-6">
-        <button (click)="changePassword()"
+        <button i18n (click)="changePassword()"
                 class="w-full h-12 px-5 text-black transition-colors duration-150 bg-[#27d17f] rounded-lg focus:shadow-outline">
           Change Password
         </button>
