--- a/src/app/authorized/history/history.component.html
+++ b/src/app/authorized/history/history.component.html
@@ -6,27 +6,27 @@
           <table aria-describedby="History table of Comparisons" class="min-w-full">
             <thead class="bg-white border-b bg-[#27d17f]">
             <tr>
-              <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+              <th i18n scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
                 Created
               </th>
-              <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+              <th i18n scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
                 Type
               </th>
-              <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+              <th i18n scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
                 Provider A
               </th>
-              <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+              <th i18n scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
                 Provider B
               </th>
-              <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+              <th i18n scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
                 Price A
               </th>
-              <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+              <th i18n scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
                 Price B
               </th>
-              <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+              <th i18n scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
               </th>
-              <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+              <th i18n scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
               </th>
             </tr>
             </thead>
