--- a/src/app/authorized/profile/profile.component.html
+++ b/src/app/authorized/profile/profile.component.html
@@ -15,7 +15,7 @@
               <div class="grid grid-cols-6 gap-6">
 
                 <div class="col-span-6 sm:col-span-1">
-                  <label for="user-id" class="block text-sm font-medium text-gray-700">ID</label>
+                  <label i18n for="user-id" class="block text-sm font-medium text-gray-700">ID</label>
                   <input type="text" name="user-id" id="user-id"
                          class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" [value]="user.id" disabled>
                 </div>
@@ -23,61 +23,61 @@
                 <div class="col-span-6 sm:col-span-5">
                 </div>
                 <div class="col-span-6 sm:col-span-3">
-                  <label for="first-name" class="block text-sm font-medium text-gray-700">First name</label>
+                  <label i18n for="first-name" class="block text-sm font-medium text-gray-700">First name</label>
                   <input  type="text" name="first-name" id="first-name" formControlName="firstName"
                          class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" [value]="user.firstName" >
-                    <small *ngIf="oldFirstName && firstName.touched" class="bg-white text-gray-400">Old Value: {{oldFirstName}}</small>
+                    <small i18n *ngIf="oldFirstName && firstName.touched" class="bg-white text-gray-400">Old Value: {{oldFirstName}}</small>
                   <div *ngIf="(firstName.invalid && firstName.touched) || firstName.dirty">
-                    <small *ngIf="firstName.errors?.['required']" class="bg-white text-red-700" role="alert">First name is
+                    <small i18n *ngIf="firstName.errors?.['required']" class="bg-white text-red-700" role="alert">First name is
                       empty, but is required</small>
-                    <small *ngIf="firstName.errors?.['pattern']" class="bg-white text-red-700" role="alert">Only letters are
+                    <small i18n *ngIf="firstName.errors?.['pattern']" class="bg-white text-red-700" role="alert">Only letters are
                       allowed</small>
                   </div>
                 </div>
 
                 <div class="col-span-6 sm:col-span-3">
-                  <label for="last-name" class="block text-sm font-medium text-gray-700">Last name</label>
+                  <label i18n for="last-name" class="block text-sm font-medium text-gray-700">Last name</label>
                   <input  type="text" name="last-name" id="last-name" formControlName="lastName"
                          class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" [value]="user.lastName">
-                  <small *ngIf="oldLastName && lastName.touched" class="bg-white text-gray-400">Old Value: {{oldLastName}}</small>
+                  <small i18n *ngIf="oldLastName && lastName.touched" class="bg-white text-gray-400">Old Value: {{oldLastName}}</small>
                   <div *ngIf="(lastName.invalid && lastName.touched) || lastName.dirty">
-                    <small *ngIf="lastName.errors?.['required']" class="bg-white text-red-700" role="alert">Last name is
+                    <small i18n *ngIf="lastName.errors?.['required']" class="bg-white text-red-700" role="alert">Last name is
                       empty, but is required</small>
-                    <small *ngIf="lastName.errors?.['pattern']" class="bg-white text-red-700" role="alert">Only letters are
+                    <small i18n *ngIf="lastName.errors?.['pattern']" class="bg-white text-red-700" role="alert">Only letters are
                       allowed</small>
                   </div>
                 </div>
 
                 <div class="col-span-6 sm:col-span-3">
-                  <label for="email-address" class="block text-sm font-medium text-gray-700">Email address</label>
+                  <label i18n for="email-address" class="block text-sm font-medium text-gray-700">Email address</label>
                   <input type="text" name="email-address" id="email-address" formControlName="email"
                          class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"  [value]="user.email">
-                  <small *ngIf="oldEmail && email.touched" class="bg-white text-gray-400">Old Value: {{oldEmail}}</small>
+                  <small i18n *ngIf="oldEmail && email.touched" class="bg-white text-gray-400">Old Value: {{oldEmail}}</small>
                   <div *ngIf="(email.invalid && email.touched) || email.dirty">
-                    <small *ngIf="email.errors?.['required']" class="bg-white text-red-700" role="alert">Email is empty, but
+                    <small i18n *ngIf="email.errors?.['required']" class="bg-white text-red-700" role="alert">Email is empty, but
                       is required</small>
-                    <small *ngIf="email.errors?.['pattern']" class="bg-white text-red-700" role="alert">Please provide a valid
+                    <small i18n *ngIf="email.errors?.['pattern']" class="bg-white text-red-700" role="alert">Please provide a valid
                       email address</small>
                   </div>
                 </div>
 
 
                 <div class="col-span-6 sm:col-span-3">
-                  <label for="country" class="block text-sm font-medium text-gray-700">Country</label>
+                  <label i18n for="country" class="block text-sm font-medium text-gray-700">Country</label>
                   <input value= "{{user.country }}" type="text" name="country" id="country"
                          class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
                          disabled>
                 </div>
 
                 <div class="col-span-6 sm:col-span-3">
-                  <label for="updated-at" class="block text-sm font-medium text-gray-700">Updated at</label>
+                  <label i18n for="updated-at" class="block text-sm font-medium text-gray-700">Updated at</label>
                   <input value= "{{user.updatedAt | date:'medium'}}" type="text" name="updated-at" id="updated-at"
                          class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
                          disabled>
                 </div>
 
                 <div class="col-span-6 sm:col-span-3">
-                  <label for="created-at" class="block text-sm font-medium text-gray-700">Created at</label>
+                  <label i18n for="created-at" class="block text-sm font-medium text-gray-700">Created at</label>
                   <input value= "{{user.createdAt | date:'medium'}}" type="text" name="created-at" id="created-at"
                          class="mt-1 focus:ring-emerald-500 focus:border-emerald-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
                          disabled>
@@ -88,8 +88,8 @@
             </div>
             <div class="flex space-x-2 justify-end p-2">
               <div>
-                <button type="button" (click)="delete()" class="inline-block px-6 py-2.5 p bg-red-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-red-700 hover:shadow-lg focus:bg-red-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-red-800 active:shadow-lg transition duration-150 ease-in-out">Delete</button>
-                <button type="button" (click)="update()" class="inline-block px-6 py-2.5 bg-transparent text-emerald-600 font-medium text-xs leading-tight uppercase rounded hover:text-emerald-700 hover:bg-gray-100 focus:bg-emerald-100 focus:outline-none focus:ring-0 active:bg-gray-200 transition duration-150 ease-in-out">Update</button>
+                <button i18n type="button" (click)="delete()" class="inline-block px-6 py-2.5 p bg-red-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-red-700 hover:shadow-lg focus:bg-red-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-red-800 active:shadow-lg transition duration-150 ease-in-out">Delete</button>
+                <button i18n type="button" (click)="update()" class="inline-block px-6 py-2.5 bg-transparent text-emerald-600 font-medium text-xs leading-tight uppercase rounded hover:text-emerald-700 hover:bg-gray-100 focus:bg-emerald-100 focus:outline-none focus:ring-0 active:bg-gray-200 transition duration-150 ease-in-out">Update</button>
               </div>
             </div>
           </div>
