--- a/src/app/unauthorized/help/help.component.html
+++ b/src/app/unauthorized/help/help.component.html
@@ -15,7 +15,7 @@
               <p class="grid grid-cols-1 pt-2">If you don't have access, here are some options:</p>
               <ul class="list-disc list-inside pt-2">
                 <li class="pl-5">Regain access to the email address if possible</li>
-                <li class="pl-5"><a href="/register" class="underline">Create a new account</a> and start fresh</li>
+                <li class="pl-5"><a routerLink="/register" class="underline">Create a new account</a> and start fresh</li>
               </ul>
             </div>
             <div class="grid grid-cols-1 pt-5">
@@ -38,7 +38,7 @@
 
               <p class="grid grid-cols-1 pt-2">Reset your password again, but this time open the emailed link in a private or incognito browser..</p>
 
-              <a href="/lost-password" class="grid grid-cols-1 pt-2 underline">Reset your password</a>
+              <a routerLink="/lost-password" class="grid grid-cols-1 pt-2 underline">Reset your password</a>
 
             </div>
             <div class="grid grid-cols-1 pt-5">
